--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,7 +3,7 @@
   "include": [
     "src/**/*.ts",
     "test/**/*.ts",
-    "wdio.conf.ts"
+    "wdio*.conf.ts"
   ],
   "exclude": [
     "node_modules"
